fix du lien vers linkedin

--- a/config.toml
+++ b/config.toml
@@ -28,5 +28,5 @@ theme = "cactus"
 
 [[params.social]]
   name = "linkedin"
-  link = "linkedin.com/in/geoffrey-pos%C3%A9-299709200/"
+  link = "https://www.linkedin.com/in/geoffrey-pos%C3%A9-299709200/"
 
