changement description cacstuserveur

--- a/data/projects.json
+++ b/data/projects.json
@@ -3,7 +3,7 @@
        {
           "name":"cactuserveur",
           "url":"https://cactuserveur.duckdns.org",
-          "desc":"hub de tout ce qui est cactus"
+          "desc":"hub du Collectif Cactus"
        },
        {
           "name":"Mon github",
