--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,7 @@ baseURL = 'https://example.org/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = 'archie'
+
+[module]  
+  [[module.imports]]  
+    path = 'github.com/hugomods/umami-analytics'
