--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
-baseURL = 'https://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
+baseURL = 'https://attadeurtia.github.io/blog/'
+languageCode = 'fr'
+title = 'Geoffrey'
 theme = 'archie'
 
 [module]  
