--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
-baseURL = "https://attadeurtia.github.io/blog/"
-languageCode = "fr-fr"
+baseURL = "https://athul.github.io/archie/"
+languageCode = "en-us"
 title = "Geoffrey"
 theme="archie"
 copyright = "© Athul"
@@ -8,7 +8,6 @@ pygmentsstyle = "monokai"
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 
-disqusShortname = "yourDisqusShortname"
 
 paginate=3 # articles per page
 
@@ -18,11 +17,6 @@ paginate=3 # articles per page
 	subtitle = "Minimal and Clean [blog theme for Hugo](https://github.com/athul/archie)"
 	mathjax = true # enable MathJax support
 	katex = true # enable KaTeX support
-
-  [params.services]
-    [params.services.umami_analytics]
-      id = '8261e837-91d2-433d-ba96-be0441457e4a'
-      script_url = 'https://cloud.umami.is/script.js'
 
 # Social Tags
 
@@ -62,8 +56,3 @@ weight = 3
 name = "Tags"
 url = "/tags"
 weight = 4
-
-[module]  
-  [[module.imports]]  
-    path = 'github.com/hugomods/umami-analytics'
-
