--- a/hugo.toml
+++ b/hugo.toml
@@ -56,3 +56,7 @@ weight = 3
 name = "Tags"
 url = "/tags"
 weight = 4
+
+[module]  
+  [[module.imports]]  
+    path = 'github.com/hugomods/umami-analytics'
