--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "themes/archie"]
 	path = themes/archie
-	url = https://github.com/athul/archie.git
+	url = https://github.com/athul/archie
 [submodule "themes/ananke"]
 	path = themes/ananke
 	url = https://github.com/theNewDynamic/gohugo-theme-ananke.git
