--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 baseURL = "https://attadeurtia.github.io/blog/"
 languageCode = "fr-fr"
 title = "Geoffrey"
-theme = 'ananke'
+theme = 'archie'
 copyright = "© Geoffrey"
 # Code Highlight
 pygmentsstyle = "monokai"
