--- a/hugo.toml
+++ b/hugo.toml
@@ -14,7 +14,7 @@ pagination.pagerSize=3 # articles per page
 	useCDN=false # don't use CDNs for fonts and icons, instead serve them locally.
 	subtitle = "Bienvenue sur mon blog ! Étudiant touche à tout, ce site est un lieu libre de partage d’experiences, de tuto et de découvertes sur tout et rien."
 
-	mathjax = true # enable MathJax support
+  # mathjax = true # enable MathJax support
   math = true # enable MathJax support
 	katex = true # enable KaTeX support
 
